# wgpu-website-prototype

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  package-lock.json  package.json
assets/: entry.sass  index.html
components/yew-color-picker/: Cargo.toml
components/yew-color-picker/src/: lib.rs
components/yew-wgpu/: Cargo.toml
components/yew-wgpu/src/: lib.rs
src/: app.rs  egui_state.rs  main.rs  pass.rs  resources.rs  state.rs
src/app/: app.rs  shader.wgsl
src/pass/: egui_pass.rs  loading_egui_pass.rs  texture_pass.rs  triangle_pass.rs
src/resources/: mesh.rs  resources.rs  resources_catalog.rs  resources_loader.rs  texture.rs
src/state/: loading_state.rs  main_state.rs  state.rs
step-runtime/: Cargo.toml
step-runtime/src/: join_handle.rs  lib.rs  runtime.rs  task.rs  timer_future.rs
web-prototype/: Cargo.toml  index.html
web-prototype/src/: app.rs  main.rs  runtime.rs
web-prototype/src/pass/: loading_egui_pass.rs  texture_pass_shader.wgsl  triangle_pass.rs
web-prototype/src/resources/: resources.rs  resources_loader.rs  texture.rs
web-prototype/src/state/: loading_state.rs  main_state.rs
yew-components/: Cargo.toml
yew-components/src/: color_picker.rs  color_slider.rs  dropdown.rs  hsv_palette.rs  hsva_sliders.rs  hue_slider.rs  lib.rs  normal_slider.rs  rgba_sliders.rs  slider.rs  util.rs
yew-components/src/color_picker/: toggle_app.rs  toggle_app.wgsl
yew-components/src/color_slider/: color_slider_track_app.rs  color_slider_track_app.wgsl  color_slider_truck_app.rs
yew-components/src/hsv_palette/: hsv_palette_app.rs  hsv_palette_app.wgsl
yew-components/src/hue_slider/: hue_slider_track_app.rs  hue_slider_track_app.wgsl
yew-components/yew-color-picker/: Cargo.toml
yew-components/yew-color-picker/src/: color_picker.rs  lib.rs
yew-components/yew-color-picker/src/color_picker/: toggle_app.wgsl
yew-components/yew-wgpu/src/: lib.rs  wgpu_canvas.rs  wgpu_canvas_app.rs
yew-wgpu/: Cargo.toml  index.html
yew-wgpu-web-prototype/: Cargo.toml  index.html  reset.css
yew-wgpu-web-prototype/sass/: entry.sass
yew-wgpu-web-prototype/src/: lib.rs  main.rs  my_canvas_app.rs  pass.rs
yew-wgpu-web-prototype/src/pass/: triangle_pass.rs  triangle_pass_shader.wgsl
yew-wgpu/assets/: room.glb
yew-wgpu/src/: hooks.rs  lib.rs  main.rs  my_canvas_app.rs  rgba_slider.rs  wgpu_canvas.rs  wgpu_canvas_app.rs
yew-wgpu/src/pass/: triangle_pass.rs
