[package]
name = "web-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
bytemuck = { version="1.7.3", features = ["derive"]}
const-fnv1a-hash = "1.0.1"
egui = "0.16.1"
egui_winit_platform = "0.13.0"
futures = "0.3.21"
image = "0.24.0"
instant = "0.1.12"
log = "0.4.14"
rand = "0.8.5"
thiserror = "1.0.30"
vek = "0.15.6"
wgpu = "0.12.0"
winit = "0.26.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9.0"
egui_wgpu_backend = "0.16.0"
tokio = { version = "1.17.0", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "time"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
step-runtime = { path = "../step-runtime" }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"
wasm-streams = "0.2.2"
wasm-timer = "0.2.5"
web-sys = { version="0.3.56", features = [
  'Blob',
  'Headers',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]}

[target.'cfg(target_arch = "wasm32")'.dependencies.egui_wgpu_backend_old]
git = "https://github.com/MatchaChoco010/egui_wgpu_backend"
package = "egui_wgpu_backend"
branch = "support-old-wgsl"
