[package]
name = "yew-components"
version = "0.1.0"
edition = "2021"
authors = ["Orito Itsuki"]
license = "MIT OR Apache-2.0"
description = "Components for Yew"

[dependencies]
bytemuck = { version="1.7.3", features = ["derive"]}
log = "0.4.14"
num = "0.4.0"
num-traits = "0.2.14"
vek = "0.15.6"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = [
  "DomRect",
  "Element",
  "Touch",
  "TouchEvent",
  "TouchList",
  "ResizeObserver",
]}
wgpu = "0.12.0"
yew = "0.19.3"
yew-style-in-rs = "0.1.0"
yew-wgpu = { path = "../yew-wgpu" }
