[package]
name = "yew-wgpu-web-prototype"
version = "0.1.0"
edition = "2021"
authors = ["Orito Itsuki"]
license = "MIT OR Apache-2.0"
description = "Yew WebGPU App prototype"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version="1.7.3", features = ["derive"]}
console_error_panic_hook = "0.1.7"
log = "0.4.14"
vek = "0.15.6"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = "0.3.56"
wee_alloc = "0.4.5"
wgpu = "0.12.0"
yew = "0.19.3"
yew-components = { path = "../yew-components" }
yew-style-in-rs = "0.1.0"
yew-wgpu = { path = "../yew-wgpu" }
