[package]
name = "yew-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version="1.7.3", features = ["derive"]}
console_error_panic_hook = "0.1.7"
gloo-render = "0.1.0"
log = "0.4.14"
raw-window-handle = "0.4.2"
tokio = { version = "1.17.0", features = ["sync"] }
vek = "0.15.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.56", features=[
  "HtmlCanvasElement"
]}
wgpu = "0.12.0"
yew = "0.19.3"
