[package]
name = "yew-color-picker"
version = "0.1.0"
edition = "2021"
authors = ["Orito Itsuki"]
license = "MIT OR Apache-2.0"
description = "Color Picker for Yew using WebGPU"

[dependencies]
log = "0.4.14"
vek = "0.15.6"
web-sys = { version = "0.3.56", features = [
  "DomRect",
  "Element",
  "ResizeObserver",
]}
wgpu = "0.12.0"
yew = "0.19.3"
yew-style-in-rs = "0.1.0"
